--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -80,6 +80,7 @@ import ThemeSwitcher from '../components/ThemeSwitcher.astro';
 
     <script>
       import '../scripts/scroll-header.ts';
+      import '../scripts/view-transitions.ts';
     </script>
   </body>
 </html>
