--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -41,7 +41,7 @@ const posts = allPosts
   .blog-index {
     max-width: var(--container-max);
     margin: 0 auto;
-    padding: var(--space-8) var(--container-px) var(--space-9);
+    padding: calc(var(--header-height) + var(--space-8)) var(--container-px) var(--space-9);
   }
 
   .blog-header {
